--- a/README
+++ b/README
@@ -18,8 +18,13 @@ NOTE
 ____
 
 I made the program general so that one can calculate the largest palindrome for 
-1,2,3,4 digits. Upon testing for 5 digits the time for the program to run became
-unreasonable. It was clear to me when devising the algorithm (uses brute force)
-that it would be O(n^2). This is not optimum however at the time it seemed to be 
-the most robust method for finding a palindrome for user specified number of digits
-for the operand.   
+a user specified number of digits. Upon testing for 5 digits the time for the program
+to run became rather unreasonable. 
+
+It was clear to me when devising the algorithm (uses brute force) that it would be O(n^2). 
+I agree that this is not optimum however it does seem to be the most robust method for 
+finding the solution. 
+
+Furthermore, I expect run-time to decrease if the functions from C++ library were used
+(I did not use any built in functions because I wanted to practice writing everything from
+scratch). 
