Edited README via GitHub

--- a/README
+++ b/README
@@ -1,5 +1,8 @@
-A little curiosity:
-===================
+-= Project Information =
+
++Project Information
+
++===================
 
 Out of curiosity I decided to compare 2 different approaches to the implementations of the solution. 
 
